radeon: only register block handler once per fd.

should fix https://bugs.freedesktop.org/show_bug.cgi?id=29726

the problem is of course the second head instance tries to access the
fd and fails, however I think this might break syncing on the second
head but not sure, but its better than just hanging up the X server